--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,1 +1,9 @@
-<p>movie-list works!</p>
+<div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-7 gap-4 p-4">
+  @for(movie of movies; track $index) {
+  <div class="group relative">
+    <app-movie-card [movieItem]="movie"></app-movie-card>
+  </div>
+  }@empty {
+  <p>No movies found</p>
+  }
+</div>
