fix some issues in app.component & add horizontal scroll for cards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <app-login></app-login> -->
-<!-- <app-register></app-register> -->
 <app-movie-list></app-movie-list>
+ <!-- <h1>peter</h1> -->
+<!-- <app-register></app-register> -->
