--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,9 +1,13 @@
-<div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-7 gap-4 p-4">
-  @for(movie of movies; track $index) {
-  <div class="group relative">
-    <app-movie-card [movieItem]="movie"></app-movie-card>
+<div class="p-4">
+  <h2 class="text-3xl font-bold text-gray-700 mb-3">| Movies</h2>
+
+  <div class="flex gap-4 overflow-x-auto whitespace-nowrap custom-scrollbar">
+    @for (movie of movies; track $index) {
+      <div class="flex-shrink-0 w-48">
+        <app-movie-card [movieItem]="movie"></app-movie-card>
+      </div>
+    } @empty {
+      <p>No movies found</p>
+    }
   </div>
-  }@empty {
-  <p>No movies found</p>
-  }
 </div>
