--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<!-- <app-login></app-login> -->
-<app-movie-list></app-movie-list>
- <!-- <h1>peter</h1> -->
-<!-- <app-register></app-register> -->
+<div class="min-h-screen bg-gray-100">
+  <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
+    <router-outlet></router-outlet>
+  </main>
+</div>
