--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,27 +1,10 @@
-<div class="filter-buttons">
-  <button 
-    (click)="filterMovies('today')" 
-    class="filter-button"
-  >Today</button>
-  <button 
-    (click)="filterMovies('week')" 
-    class="filter-button"
-  >This Week</button>
-  <button 
-    (click)="filterMovies('all')" 
-    class="filter-button"
-  >Show All</button>
-</div>
-
 <div class="p-4">
   <h2 class="text-3xl font-bold text-gray-700 mb-3">| Movies</h2>
 
   <div class="flex gap-4 overflow-x-auto whitespace-nowrap custom-scrollbar">
     @for (movie of movies; track $index) {
       <div class="flex-shrink-0 w-48">
-        <app-movie-card 
-          [movieItem]="movie"
-        ></app-movie-card>
+        <app-movie-card [movieItem]="movie"></app-movie-card>
       </div>
     } @empty {
       <p>No movies found</p>
