--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,7 +13,7 @@
       <!-- Navigation links -->
       <div class="hidden md:flex items-center space-x-8">
         <a routerLink="/tv-shows" routerLinkActive="text-indigo-400" [routerLinkActiveOptions]="{exact: true}" class="hover:text-indigo-300 transition-colors">TV Shows</a>
-         <a routerLink="" routerLinkActive="text-indigo-400" class="hover:text-indigo-300 transition-colors">Movies List</a>
+         <a routerLink="/movies" routerLinkActive="text-indigo-400" class="hover:text-indigo-300 transition-colors">Movies List</a>
       </div>
       
       <!-- Search bar -->
