--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,7 +14,9 @@
       <div class="hidden md:flex items-center space-x-8">
         <a routerLink="/tv-shows" routerLinkActive="text-indigo-400" [routerLinkActiveOptions]="{exact: true}" class="hover:text-indigo-300 transition-colors">TV Shows</a>
          <a routerLink="" routerLinkActive="text-indigo-400" class="hover:text-indigo-300 transition-colors">Movies List</a>
-      </div>
+         <a routerLink="/watchlist" routerLinkActive="text-indigo-400" class="hover:text-indigo-300 transition-colors">watch List</a>
+
+        </div>
       
       <!-- Search bar -->
       <div class="hidden md:block">
