--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
   <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
     <router-outlet></router-outlet>
   </main>
+  <app-toast></app-toast>
 </div>
