fixing routes in watchlist

--- a/src/app/watch-list/watch-list.component.html
+++ b/src/app/watch-list/watch-list.component.html
@@ -140,18 +140,18 @@
                   <div class="text-gray-400 text-lg mb-4">Your watchlist is empty</div>
                   <p class="text-gray-500 mb-6">Start exploring movies and TV shows to add to your watchlist</p>
                   <div class="flex space-x-4 justify-center">
-                      <button class="bg-indigo-600 hover:bg-indigo-500 text-white px-6 py-2 rounded-full font-medium focus:outline-none transition-colors duration-200 flex items-center">
+                      <a  routerLink="/movies" class="bg-indigo-600 hover:bg-indigo-500 text-white px-6 py-2 rounded-full font-medium focus:outline-none transition-colors duration-200 flex items-center">
                           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
                               <path d="M4 3a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V5a2 2 0 00-2-2H4zm3 2h6v4H7V5zm8 8v2h1v-2h-1zm-2-2H7v4h6v-4zm2 0h1V9h-1v2zm1-4V5h-1v2h1zM5 5v2H4V5h1zm0 4H4v2h1V9zm-1 4h1v2H4v-2z" />
                           </svg>
                           Explore Movies
-                      </button>
-                      <button class="bg-indigo-600 hover:bg-indigo-500 text-white px-6 py-2 rounded-full font-medium focus:outline-none transition-colors duration-200 flex items-center">
+                        </a>
+                      <a routerLink="/tv-shows" class="bg-indigo-600 hover:bg-indigo-500 text-white px-6 py-2 rounded-full font-medium focus:outline-none transition-colors duration-200 flex items-center">
                           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
                               <path fill-rule="evenodd" d="M3 5a2 2 0 012-2h10a2 2 0 012 2v8a2 2 0 01-2 2h-2.22l.123.489.804.804A1 1 0 0113 18H7a1 1 0 01-.707-1.707l.804-.804L7.22 15H5a2 2 0 01-2-2V5zm5.771 7H5V5h10v7H8.771z" clip-rule="evenodd" />
                           </svg>
                           Explore TV Shows
-                      </button>
+                        </a>
                   </div>
               </div>
           }
