--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <!-- src/app/home/home.component.html -->
 <!-- Hero Section -->
-<div class="relative bg-black">
+<div class="relative bg-black bg-cover bg-center" style="background-image: url('inception.jpg');">
   <div class="absolute inset-0 bg-gradient-to-r from-black to-transparent z-10"></div>
   <div class="relative max-w-7xl mx-auto px-4 py-24 sm:px-6 lg:px-8 z-20">
     <div class="max-w-2xl">
