--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-indigo-500" viewBox="0 0 20 20" fill="currentColor">
           <path fill-rule="evenodd" d="M4 3a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V5a2 2 0 00-2-2H4zm3 2h6v4H7V5zm8 8v2h1v-2h-1zm-2-8h1v2h-1V5zm4 0h1v2h-1V5zm-8 6h2v4H7v-4zm4 0h2v4h-2v-4z" clip-rule="evenodd" />
         </svg>
-        <span class="font-bold text-xl tracking-tight">YTS</span>
+        <span class="font-bold text-xl tracking-tight">Movie App</span>
       </a>
       
       <!-- Navigation links -->
@@ -34,6 +34,11 @@
       <div class="hidden md:block w-64">
         <app-search></app-search>
       </div>
+      
+      <a routerLink="/login" routerLinkActive="text-indigo-400" class="hover:text-indigo-300 transition-colors">Login</a>
+      <a routerLink="/register" routerLinkActive="text-indigo-400" class="hover:text-indigo-300 transition-colors">Regiser</a>
+  
+      
       
       <!-- Mobile menu button -->
       <div class="md:hidden">
